# expenses

./: .gitignore  Cargo.toml  README.md  flake.nix  go.mod  go.sum  justfile  main.go
cmd/expenses/: main.go
internal/data/: repository.go
internal/models/: models.go
internal/repository/: models.go  repository.go  schema.go
lua-testing/: go.mod  go.sum  test.lua  testing.go
src/: cli.rs  error.rs  lib.rs  main.rs  models.rs  repository.rs  sqlite.rs  styling.rs
src/commands/: export.rs  mod.rs  show_table.rs
tests/: sqlite_repository.rs
xp/testing/: app.json  package-lock.json  package.json
