[package]
name = "expenses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono", "serde_json"] }
serde_json = "1.0.132"
tabled = "0.16.0"
termsize = "0.1.9"
uuid = { version = "1.11.0", features = ["v4"] }
